[gd_scene load_steps=15 format=2]

[ext_resource path="res://enemies/Boss weas/ZA HANDO/l_hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/Boss weas/Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Boss weas/ZA HANDO/r_hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Boss weas/magic_circle.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Boss weas/ZA HANDO/l_hand.gd" type="Script" id=5]
[ext_resource path="res://enemies/Boss weas/boss_script.gd" type="Script" id=6]
[ext_resource path="res://enemies/Boss weas/ZA HANDO/r_hand.gd" type="Script" id=7]
[ext_resource path="res://HPBar.gd" type="Script" id=8]
[ext_resource path="res://Assets/kel_hapi.tres" type="Texture" id=9]
[ext_resource path="res://Assets/kel_mad.tres" type="Texture" id=10]

[sub_resource type="SphereShape" id=11]

[sub_resource type="SphereMesh" id=12]

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=17]
render_priority = 1
next_pass = SubResource( 16 )
albedo_texture = ExtResource( 9 )

[node name="Boss" type="KinematicBody"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.293777, 37.9272, 0 )
script = ExtResource( 6 )
magic_circle = ExtResource( 4 )

[node name="l_hand" type="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, -2, -1 )
script = ExtResource( 5 )

[node name="r_hand" type="Spatial" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, -2, -1 )
script = ExtResource( 7 )
projectile_scene = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 11 )

[node name="hp_bar" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 40.0
color = Color( 0.501961, 0.0235294, 0.47451, 1 )
script = ExtResource( 8 )
factor = 500.0

[node name="pivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )

[node name="face" type="MeshInstance" parent="."]
mesh = SubResource( 12 )
material/0 = SubResource( 17 )
